--- a/build-ps/debian/control
+++ b/build-ps/debian/control
@@ -306,6 +306,21 @@ Description: Debugging package for Percona XtraDB Cluster
  .
  This package contains the debugging symbols for the Percona XtraDB Cluster binaries.
 
+
+Package: percona-xtradb-cluster-server-debug-5.6-dbg
+Architecture: any
+Section: debug
+Depends: percona-xtradb-cluster-server-5.6 (= ${binary:Version}), ${misc:Depends}
+Description: Debugging package for Percona XtraDB Cluster
+ Percona XtraDB Cluster is based on the Percona Server database
+ server and provides a High Availability solution.
+ Percona XtraDB Cluster provides synchronous replication, supports
+ multi-master replication, parallel applying on slaves, automatic
+ node provisioning with primary focus on data consistency.
+ .
+ This package contains the debugging symbols for the Percona XtraDB Cluster binaries.
+
+
 Package: percona-xtradb-cluster-source-5.6
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
