--- a/build-ps/debian/control
+++ b/build-ps/debian/control
@@ -226,37 +226,7 @@ Depends: percona-xtradb-cluster-client-5.6 (>= ${source:Version}),
         lsof,
          rsync,
          iproute
-Provides: mysql-server,
-          virtual-mysql-server,
-          virtual-mysql-server-core
-Breaks: mysql-server-5.0,
-        mysql-server-5.1,
-        mysql-server-5.5,
-        mysql-server-5.6,
-        mysql-server-core-5.1,
-        percona-xtradb-server-5.0,
-        percona-server-server-5.1,
-        percona-server-server-5.5,
-        percona-xtradb-cluster-server-5.5,
-        mariadb-server,
-        mariadb-server-core-5.5,
-        mariadb-server-5.5,
-        virtual-mysql-server,
-        virtual-mysql-server-core
-Replaces: mysql-server-5.0,
-          mysql-server-5.1,
-          mysql-server-5.5,
-          mysql-server-5.6,
-          mysql-server-core-5.1,
-          percona-xtradb-server-5.0,
-          percona-server-server-5.1,
-          percona-server-server-5.5,
-          percona-xtradb-cluster-server-5.5,
-          mariadb-server,
-          mariadb-server-core-5.5,
-          mariadb-server-5.5,
-          virtual-mysql-server,
-          virtual-mysql-server-core
+Provides: mysql-server-debug
 Description: Percona XtraDB Cluster database server UNIV_DEBUG binaries
  Percona XtraDB Cluster is based on the Percona Server database
  server and provides a High Availability solution.
