--- a/build-ps/debian/control
+++ b/build-ps/debian/control
@@ -246,12 +246,26 @@ Depends: percona-xtradb-cluster-server-5.5 (>= ${source:Version}), percona-xtrad
 Description: Percona XtraDB Cluster with Galera
  This is a meta-package providing PXC56 server, client and galera-2.
 
+Package: percona-xtradb-cluster-55-g3
+Section: database
+Architecture: any
+Depends: percona-xtradb-cluster-server-5.5 (>= ${source:Version}), percona-xtradb-cluster-client-5.5 (>= ${source:Version}), percona-xtradb-cluster-galera-3, ${misc:Depends}
+Description: Percona XtraDB Cluster with Galera
+ This is a meta-package providing PXC56 server, client and galera-3.
+
 Package: percona-xtradb-cluster-full-55
 Section: database
 Architecture: any
 Depends: percona-xtradb-cluster-server-5.5 (>= ${source:Version}), percona-xtradb-cluster-client-5.5 (>= ${source:Version}), percona-xtradb-cluster-galera-2, percona-xtradb-cluster-test-5.5 (>= ${source:Version}), percona-xtradb-cluster-5.5-dbg (>= ${source:Version}), percona-xtradb-cluster-garbd-2, percona-xtradb-cluster-galera2-dbg, ${misc:Depends}
 Description: Percona XtraDB Cluster with Galera
  This is a meta-package providing PXC56 server, client, galera-2, test and debug packages.
+
+Package: percona-xtradb-cluster-full-55-g3
+Section: database
+Architecture: any
+Depends: percona-xtradb-cluster-server-5.5 (>= ${source:Version}), percona-xtradb-cluster-client-5.5 (>= ${source:Version}), percona-xtradb-cluster-galera-3, percona-xtradb-cluster-test-5.5 (>= ${source:Version}), percona-xtradb-cluster-5.5-dbg (>= ${source:Version}), percona-xtradb-cluster-garbd-3, percona-xtradb-cluster-galera3-dbg, ${misc:Depends}
+Description: Percona XtraDB Cluster with Galera
+ This is a meta-package providing PXC56 server, client, galera-3, test and debug packages.
 
 Package: percona-xtradb-cluster-5.5-dbg
 Architecture: any
