--- a/build-ps/rpm/mysql.service
+++ b/build-ps/rpm/mysql.service
@@ -1,18 +1,10 @@
-#
-# Simple MySQL systemd service file
-#
-# systemd supports lots of fancy features, look here (and linked docs) for a full list: 
-#   http://www.freedesktop.org/software/systemd/man/systemd.exec.html
-#
-# Note: this file ( /usr/lib/systemd/system/mysql.service )
-# will be overwritten on package upgrade, please copy the file to 
-#
-#  /etc/systemd/system/mysql.service 
-#  
-# to make needed changes.
-# 
-# systemd-delta can be used to check differences between the two mysql.service files.
-#
+# Systemd service file for Percona XtraDB Cluster
+
+# This service file is to start PXC just with mysqld_safe
+# Usually in the non-bootstrapping case.
+
+# For bootstrapping or passing environment file
+# Refer to mysql@.service
 
 [Unit]
 Description=Percona XtraDB Cluster
@@ -26,15 +18,13 @@ Alias=mysql.service
 # Needed to create system tables etc.
 ExecStartPre=/usr/bin/mysql-systemd-start start-pre
 
-EnvironmentFile=/etc/sysconfig/mysql
 # Start main service
-ExecStart=/usr/bin/mysqld_safe ${EXTRA_ARGS}
+ExecStart=/usr/bin/mysqld_safe 
 
 # Don't signal startup success before a ping works
 ExecStartPost=/usr/bin/mysql-systemd-start start-post
 
 ExecStopPost=/usr/bin/mysql-systemd-start stop-post
-
 
 # Timeout is handled elsewhere
 # service-startup-timeout in my.cnf 
