--- a/build-ps/rpm/mysql.service
+++ b/build-ps/rpm/mysql.service
@@ -34,7 +34,10 @@ TimeoutStartSec=0
 # Maximum time to stop
 TimeoutStopSec=900
 
-Restart=always
+# Unsafe for PXC
+# mysqld_safe handles this too.
+Restart=no
+
 PrivateTmp=false
 
 
