--- a/build-ps/rpm/mysql@.service
+++ b/build-ps/rpm/mysql@.service
@@ -45,13 +45,16 @@ ExecStartPre=/usr/bin/mysql-systemd-start start-pre
 
 EnvironmentFile=/etc/sysconfig/mysql.%i
 # Start main service
-ExecStart=/usr/bin/mysqld_safe ${EXTRA_ARGS}
+ExecStart=/usr/bin/mysqld_safe --basedir=/usr ${EXTRA_ARGS}
 
 # Don't signal startup success before a ping works
-ExecStartPost=/usr/bin/mysql-systemd-start start-post
+ExecStartPost=/usr/bin/mysql-systemd start-post
 
-ExecStopPost=/usr/bin/mysql-systemd-start stop-post
+ExecStop=/usr/bin/mysql-systemd stop
 
+ExecStopPost=/usr/bin/mysql-systemd stop-post
+
+ExecReload=/usr/bin/mysql-systemd reload
 
 # Timeout is handled elsewhere
 # service-startup-timeout in my.cnf 
