--- a/build-ps/rpm/mysql@.service
+++ b/build-ps/rpm/mysql@.service
@@ -41,18 +41,18 @@ Alias=mysql-%i.service
 
 [Service]
 # Needed to create system tables etc.
-ExecStartPre=/usr/bin/mysql-systemd-start start-pre
+ExecStartPre=/usr/bin/mysql-systemd start-pre
 
 EnvironmentFile=/etc/sysconfig/mysql.%i
 # Start main service
 ExecStart=/usr/bin/mysqld_safe --basedir=/usr ${EXTRA_ARGS}
 
 # Don't signal startup success before a ping works
-ExecStartPost=/usr/bin/mysql-systemd start-post
+ExecStartPost=/usr/bin/mysql-systemd start-post $MAINPID
 
 ExecStop=/usr/bin/mysql-systemd stop
 
-ExecStopPost=/usr/bin/mysql-systemd stop-post
+ExecStopPost=/usr/bin/mysql-systemd stop-post $MAINPID
 
 ExecReload=/usr/bin/mysql-systemd reload
 
