--- a/build-ps/rpm/mysql@.service
+++ b/build-ps/rpm/mysql@.service
@@ -52,7 +52,7 @@ ExecStartPost=/usr/bin/mysql-systemd start-post $MAINPID
 
 ExecStop=/usr/bin/mysql-systemd stop
 
-ExecStopPost=/usr/bin/mysql-systemd stop-post $MAINPID
+ExecStopPost=/usr/bin/mysql-systemd stop-post
 
 ExecReload=/usr/bin/mysql-systemd reload
 
