Fix spec file for systemd and also add tmpfiles.d invocation

--- a/build-ps/rpm/mysql@.service
+++ b/build-ps/rpm/mysql@.service
@@ -37,7 +37,7 @@ After=network.target syslog.target
 
 [Install]
 WantedBy=multi-user.target
-Alias=mysql-%i.service
+Alias=mysql.service
 
 [Service]
 # Needed to create system tables etc.
