--- a/build-ps/rpm/my.cnf
+++ b/build-ps/rpm/my.cnf
@@ -23,9 +23,11 @@ wsrep_node_name                = Node1
 innodb_locks_unsafe_for_binlog = 1
 innodb_autoinc_lock_mode       = 2
 
-query_cache_type               = 0
-query_cache_size               = 0
+
 
 [mysqld_safe]
 pid-file = /run/mysqld/mysql.pid
 syslog
+
+
+!includedir /etc/my.cnf.d
