--- a/support-files/wsrep/debian/rules
+++ b/support-files/wsrep/debian/rules
@@ -16,11 +16,11 @@ override_dh_auto_configure:
 		-DMYSQL_USER=mysql \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DWITH_WSREP=1 \
-		-DWITH_SSL=bundled \
-		-DWITH_ZLIB=system \
 		-DWITH_EXTRA_CHARSETS=all \
 		-DWITH_INNODB_MEMCACHED=ON \
-		-DWITH_LIBEVENT=system ..
+		-DWITH_SSL=system \
+		-DWITH_ZLIB=system \
+		-DWITH_LIBEVENT=bundled ..
 
 override_dh_auto_build:
 	cd build_release && make -j3
@@ -77,7 +77,7 @@ override_dh_auto_install:
 .PHONY: override_dh_strip
 
 override_dh_strip:
-# 	dh_strip -pmysql-client-wsrep --dbg-package=mysql-client-wsrep-dbg
+	dh_strip -pmysql-client-wsrep --dbg-package=mysql-client-wsrep-dbg
 	dh_strip -pmysql-server-wsrep --dbg-package=mysql-server-wsrep-dbg
 
 %:
