--- a/mysql-test/suite/galera/galera_2nodes.cnf
+++ b/mysql-test/suite/galera/galera_2nodes.cnf
@@ -13,6 +13,7 @@ wsrep_provider_options='base_port=@mysqld.1.#galera_port'
 wsrep_sst_receive_address='127.0.0.1:@mysqld.1.#sst_port'
 # enforce read-committed characteristics across the cluster
 wsrep_causal_reads=ON
+wsrep_sync_wait = 7
 wsrep_node_address=127.0.0.1
 wsrep_node_incoming_address=127.0.0.1
 
@@ -28,6 +29,7 @@ wsrep_provider_options='base_port=@mysqld.2.#galera_port'
 wsrep_sst_receive_address='127.0.0.1:@mysqld.2.#sst_port'
 # enforce read-committed characteristics across the cluster
 wsrep_causal_reads=ON
+wsrep_sync_wait = 7
 wsrep_node_address=127.0.0.1
 wsrep_node_incoming_address=127.0.0.1
 
