PXC-173 Port version updates from 5.5 tree

--- a/build-ps/debian/rules
+++ b/build-ps/debian/rules
@@ -31,11 +31,11 @@ EXPORTED_SOURCE_TARBALL = debian/percona-xtradb-cluster-source-5.6.tar.gz
 DISTRIBUTION = $(shell lsb_release -i -s)
 DISTRELEASE = $(shell lsb_release -sc)
 
-major_version=68
-minor_version=0
-wsrep_version="25.7"
-compilation_comment_release="Percona XtraDB Cluster (GPL), Release $(wsrep_version)"
-compilation_comment_debug="Percona XtraDB Cluster - Debug (GPL), Release $(wsrep_version)"
+wsrep_version="@@WSREP_VERSION@@"
+percona_server_version="@@PERCONA_VERSION@@"
+revision="@@REVISION@@"
+compilation_comment_debug="Percona XtraDB Cluster - Debug (GPL), Release rel$(percona_server_version), Revision $(revision), WSREP version $(wsrep_version)"
+compilation_comment_release="Percona XtraDB Cluster (GPL), Release rel$(percona_server_version), Revision $(revision), WSREP version $(wsrep_version)"
 server_suffix="-56"
 prefix=/usr
 
