--- a/mysql-test/suite/galera/galera_2nodes.cnf
+++ b/mysql-test/suite/galera/galera_2nodes.cnf
@@ -7,7 +7,6 @@ binlog-format=row
 wsrep_provider=@ENV.WSREP_PROVIDER
 wsrep_cluster_address='gcomm://'
 wsrep_provider_options='base_port=@mysqld.1.#galera_port'
-wsrep_sst_receive_address='127.0.0.1:@mysqld.1.#sst_port'
 
 # enforce read-committed characteristics across the cluster
 wsrep_causal_reads=ON
@@ -15,6 +14,9 @@ wsrep_sync_wait = 7
 
 wsrep_node_address=127.0.0.1
 wsrep_node_incoming_address=127.0.0.1
+
+# Required for Galera
+innodb_autoinc_lock_mode=2
 
 [mysqld.2]
 binlog-format=row
@@ -22,13 +24,16 @@ binlog-format=row
 wsrep_provider=@ENV.WSREP_PROVIDER
 wsrep_cluster_address='gcomm://127.0.0.1:@mysqld.1.#galera_port'
 wsrep_provider_options='base_port=@mysqld.2.#galera_port'
-wsrep_sst_receive_address='127.0.0.1:@mysqld.2.#sst_port'
+
 # enforce read-committed characteristics across the cluster
 wsrep_causal_reads=ON
 wsrep_sync_wait = 7
 
 wsrep_node_address=127.0.0.1
 wsrep_node_incoming_address=127.0.0.1
+
+# Required for Galera
+innodb_autoinc_lock_mode=2
 
 [ENV]
 NODE_MYPORT_1= @mysqld.1.port
