--- a/mysql-test/suite/galera/galera_2nodes.cnf
+++ b/mysql-test/suite/galera/galera_2nodes.cnf
@@ -12,7 +12,9 @@ wsrep_provider_options='base_port=@mysqld.1.#galera_port'
 wsrep_causal_reads=ON
 wsrep_sync_wait = 7
 
-wsrep_sst_receive_address=127.0.0.1:@mysqld.1.#sst_port
+wsrep_node_address=127.0.0.1
+wsrep_sst_receive_address=127.0.0.2:@mysqld.1.#sst_port
+wsrep_node_incoming_address=127.0.0.1:@mysqld.1.port
 
 # Required for Galera
 innodb_autoinc_lock_mode=2
@@ -28,7 +30,9 @@ wsrep_provider_options='base_port=@mysqld.2.#galera_port'
 wsrep_causal_reads=ON
 wsrep_sync_wait = 7
 
-wsrep_sst_receive_address=127.0.0.1:@mysqld.2.#sst_port
+wsrep_node_address=127.0.0.1
+wsrep_sst_receive_address=127.0.0.2:@mysqld.2.#sst_port
+wsrep_node_incoming_address=127.0.0.1:@mysqld.2.port
 
 # Required for Galera
 innodb_autoinc_lock_mode=2
@@ -39,3 +43,9 @@ NODE_MYSOCK_1= @mysqld.1.socket
 
 NODE_MYPORT_2= @mysqld.2.port
 NODE_MYSOCK_2= @mysqld.2.socket
+
+NODE_GALERAPORT_1= @mysqld.1.#galera_port
+NODE_GALERAPORT_2= @mysqld.2.#galera_port
+
+NODE_SSTPORT_1= @mysqld.1.#sst_port
+NODE_SSTPORT_2= @mysqld.2.#sst_port
