Bug#1381492 Source the defaults file in centos and debian/ubuntu

--- a/build-ps/rpm/mysql.service
+++ b/build-ps/rpm/mysql.service
@@ -18,6 +18,7 @@ Alias=mysql.service
 # Needed to create system tables etc.
 ExecStartPre=/usr/bin/mysql-systemd start-pre
 
+EnvironmentFile=-/etc/sysconfig/mysql
 # Start main service
 ExecStart=/usr/bin/mysqld_safe --basedir=/usr
 
