Galera MTR Tests: update disabled.def; push new tests around CREATE, ALTER, MyISAM support, and others.

--- a/mysql-test/suite/galera/galera_2nodes.cnf
+++ b/mysql-test/suite/galera/galera_2nodes.cnf
@@ -19,6 +19,8 @@ wsrep_node_incoming_address=127.0.0.1:@mysqld.1.port
 # Required for Galera
 innodb_autoinc_lock_mode=2
 
+innodb_flush_log_at_trx_commit=2
+
 [mysqld.2]
 binlog-format=row
 
@@ -36,6 +38,8 @@ wsrep_node_incoming_address=127.0.0.1:@mysqld.2.port
 
 # Required for Galera
 innodb_autoinc_lock_mode=2
+
+innodb_flush_log_at_trx_commit=2
 
 [ENV]
 NODE_MYPORT_1= @mysqld.1.port
