--- a/debian/rules
+++ b/debian/rules
@@ -141,21 +141,14 @@ auto_install-stamp:
 	dh_testroot
 	# make install (trailing slash needed for innobase)
 	cd $(builddir) && $(MAKE) install DESTDIR=$(TMP)/
-	# After installing, remove rpath to make lintian happy.
-	set +e; \
-	find ./debian/tmp/ -type f -print0 \
-		| xargs -0 --no-run-if-empty chrpath -k 2>/dev/null \
-		| fgrep RPATH= \
-		| cut -d: -f 1 \
-		| xargs --no-run-if-empty chrpath -d; \
-	set -e
 	# install libmysqld built with -FPIC
 	install -d -m 0755 -o root -g root $(TMP)/usr/lib/mysql
 	install -m 0644 -o root -g root $(BUILDDIR_PIC)/libmysqld/libmysqld.a $(TMP)/usr/lib/mysql/libmysqld_pic.a
 	# mysql_config won't report the -fPIC, so give libmysqld-pic users a way to get their flags
 	install -m 0755 -o root -g root $(BUILDDIR_PIC)/scripts/mysql_config $(TMP)/usr/bin/mysql_config_pic
-	mkdir -p $(TMP)/usr/share/doc/mysql-server-5.6
-	nm -n $(BUILDDIR)/sql/mysqld |gzip -9 > $(TMP)/usr/share/doc/mysql-server-5.6/mysqld.sym.gz
+	mkdir -p $(TMP)/usr/share/doc/mysql-wsrep-server-5.6
+	install -m 0644 Docs/README-wsrep $(TMP)/usr/share/doc/mysql-wsrep-server-5.6
+	nm -n $(BUILDDIR)/sql/mysqld |gzip -9 > $(TMP)/usr/share/doc/mysql-wsrep-server-5.6/mysqld.sym.gz
 	# This seems to be the only safe place to fix permissions issues
         # not handled by dh_fixperms.
 	mkdir -p $(TMP)/etc/mysql/conf.d/
