--- a/debian/rules
+++ b/debian/rules
@@ -108,7 +108,7 @@ configure-stamp configure-pic-stamp:
 		-DWITH_EXTRA_CHARSETS=all ..'
 	touch $@
 
-override_dh_auto_build: build-stamp build-pic-stamp
+override_dh_auto_build: build-stamp
 
 build-stamp:
 	@echo "RULES.$@"
@@ -119,6 +119,8 @@ build-stamp:
 	touch $@
 
 build-pic-stamp:
+	# Don't call this section from dh_auto_build as
+	# linmysqld does not exsist in mysql-wsrep
 	@echo "RULES.$@"
 	cd $(builddir) && $(MAKE) -C scripts
 	cd $(builddir) && $(MAKE) -C libmysqld
@@ -144,9 +146,10 @@ auto_install-stamp:
 	cd $(builddir) && $(MAKE) install DESTDIR=$(TMP)/
 	# install libmysqld built with -FPIC
 	install -d -m 0755 -o root -g root $(TMP)/usr/lib/mysql
-	install -m 0644 -o root -g root $(BUILDDIR_PIC)/libmysqld/libmysqld.a $(TMP)/usr/lib/mysql/libmysqld_pic.a
-	# mysql_config won't report the -fPIC, so give libmysqld-pic users a way to get their flags
-	install -m 0755 -o root -g root $(BUILDDIR_PIC)/scripts/mysql_config $(TMP)/usr/bin/mysql_config_pic
+	# linmysqld does not exsist in mysql-wsrep
+	# install -m 0644 -o root -g root $(BUILDDIR_PIC)/libmysqld/libmysqld.a $(TMP)/usr/lib/mysql/libmysqld_pic.a
+	## mysql_config won't report the -fPIC, so give libmysqld-pic users a way to get their flags
+	# install -m 0755 -o root -g root $(BUILDDIR_PIC)/scripts/mysql_config $(TMP)/usr/bin/mysql_config_pic
 	mkdir -p $(TMP)/usr/share/doc/mysql-wsrep-server-5.6
 	install -m 0644 Docs/README-wsrep $(TMP)/usr/share/doc/mysql-wsrep-server-5.6
 	nm -n $(BUILDDIR)/sql/mysqld |gzip -9 > $(TMP)/usr/share/doc/mysql-wsrep-server-5.6/mysqld.sym.gz
