--- a/debian/rules
+++ b/debian/rules
@@ -150,9 +150,10 @@ auto_install-stamp:
 	# install -m 0644 -o root -g root $(BUILDDIR_PIC)/libmysqld/libmysqld.a $(TMP)/usr/lib/mysql/libmysqld_pic.a
 	## mysql_config won't report the -fPIC, so give libmysqld-pic users a way to get their flags
 	# install -m 0755 -o root -g root $(BUILDDIR_PIC)/scripts/mysql_config $(TMP)/usr/bin/mysql_config_pic
-	mkdir -p $(TMP)/usr/share/doc/mysql-wsrep-server-5.6
-	install -m 0644 Docs/README-wsrep $(TMP)/usr/share/doc/mysql-wsrep-server-5.6
-	nm -n $(BUILDDIR)/sql/mysqld |gzip -9 > $(TMP)/usr/share/doc/mysql-wsrep-server-5.6/mysqld.sym.gz
+	mkdir -p $(TMP)/usr/share/doc/mysql-server-5.6
+	install -m 0644 Docs/README-wsrep $(TMP)/usr/share/doc/mysql-server-5.6
+	nm -n $(BUILDDIR)/sql/mysqld |gzip -9 > $(TMP)/usr/share/doc/mysql-server-5.6/mysqld.sym.gz
+	install -m 0644 support-files/wsrep.cnf $(TMP)/usr/share/mysql
 	# This seems to be the only safe place to fix permissions issues
         # not handled by dh_fixperms.
 	mkdir -p $(TMP)/etc/mysql/conf.d/
