--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,3 +1,5 @@
 [DEFAULT]
-debian-branch = master
-pristine-tar = True
+debian-branch = 5.6-debian
+upstream-branch = 5.6-debian
+upstream-tree = branch
+pristine-tar = False
