--- a/debian/rules
+++ b/debian/rules
@@ -219,6 +219,11 @@ override_dh_installinit-arch:
 override_dh_installcron-arch:
 	dh_installcron --name mysql-server
 
+override_dh_strip:
+	dh_strip --dbg-package=mysql-wsrep-server-dbg-5.6
+	dh_strip --dbg-package=mysql-wsrep-client-dbg-5.6
+	dh_strip --dbg-package=mysql-wsrep-libmysqlclient18-dbg
+
 binary:	binary-indep binary-arch
 
 get-orig-source:
