--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -424,15 +424,6 @@ IF(WIN32)
     INSTALL_SCRIPT(${CMAKE_CURRENT_BINARY_DIR}/${file}.pl COMPONENT Server_Scripts)
   ENDFOREACH()
 ELSE()
-  IF(WITH_WSREP)
-    SET(WSREP_BINARIES
-      wsrep_sst_common
-      wsrep_sst_mysqldump
-      wsrep_sst_rsync
-      wsrep_sst_xtrabackup
-      wsrep_sst_xtrabackup-v2
-    )
-  ENDIF()
   # Configure this one, for testing, but do not install it.
   CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/mysql_config.pl.in
     ${CMAKE_CURRENT_BINARY_DIR}/mysql_config.pl ESCAPE_QUOTES @ONLY)
@@ -451,6 +442,16 @@ ELSE()
       mysqld_multi
       mysqld_safe
       )
+  ENDIF()
+  IF(WITH_WSREP)
+    SET(BIN_SCRIPTS
+      ${BIN_SCRIPTS}
+      wsrep_sst_common
+      wsrep_sst_mysqldump
+      wsrep_sst_rsync
+      wsrep_sst_xtrabackup
+      wsrep_sst_xtrabackup-v2
+    )
   ENDIF()
 
   SET(PKGCONFIG_FILE ${LIBMYSQL_OS_OUTPUT_NAME}.pc)
