--- a/mysql-test/suite/galera/galera_2nodes_as_slave.cnf
+++ b/mysql-test/suite/galera/galera_2nodes_as_slave.cnf
@@ -30,7 +30,8 @@ wsrep_node_incoming_address=127.0.0.1:@mysqld.2.port
 innodb_autoinc_lock_mode=2
 
 innodb_flush_log_at_trx_commit=2
-#log_slave_updates=1
+
+log_slave_updates=1
 
 [mysqld.3]
 binlog-format=row
