--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,3 +1,8 @@
 [DEFAULT]
-debian-branch = master
-pristine-tar = True
+# Ignore requirement to use branch name 'master' to make it easier
+# for contributors to work with feature and bugfix branches
+ignore-branch = True
+
+upstream-branch = 5.7-v25
+upstream-tree = branch
+pristine-tar = False
